# watermeter_esp32

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  main.c  wm_config.c  wm_filesys.c  wm_httpd.c  wm_log.c  wm_mqtt.c  wm_pulse.c  wm_time.c  wm_utils.c  wm_wifi.c
main/certs/: cacert.pem  prvtkey.pem
main/include/: wm_config.h  wm_filesys.h  wm_global.h  wm_httpd.h  wm_log.h  wm_mqtt.h  wm_pulse.h  wm_time.h  wm_utils.h  wm_wifi.h
storage/certs/: cacert.pem  mqttcert.pem  prvtkey.pem
storage/html/: config.html  config.tpl  index.html  index.tpl  log.html  log.tpl  ok.html  ok.tpl  scripts.js  settings.html  style.css  upload.html  upload.tpl
